# fastapi_ecommerce

./: alembic.ini  pyproject.toml
app/: auth.py  database.py  db_depends.py  main.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 0bc5fa8dbfc9_add_user_model3.py  0d4dcc1e6e50_create_categories_and_products_tables.py  1617876995dd_initial_migration_for_postgresql.py  2026_02_24_1404_b73d1296d164_adding_fields_rating_in_model_products.py  2026_02_25_1243_4dc7facbfb82_change_grade_enum_to_native_integer_333.py  2026_02_25_1253_aff89ce389d3_change_grade_enum_to_native_integer_444.py  2026_02_28_1402_f8bf6cdb92ed_added_in_model_products_fields_created_.py  3eb73b2b8cc4_initial_migration_for_postgresql.py  42a6e19a69ac_add_user_model.py  5aa27f7cd845_initial_migration_for_postgresql.py  5e4194d2058c_add_user_model.py  7670a9070801_add_user_model2.py  ac7e4888ca1d_create_rewiews_tables.py  c3aa51db703a_initial_migration_for_postgresql.py  d253940f8433_add_user_model.py  e57f785e283e_initial_migration_for_postgresql.py  f6c7137a5133_create_rewiews_tables.py
app/models/: __init__.py  categories.py  products.py  reviews.py  users.py
app/repositories/: categories.py  common.py  dependencies.py  products.py  products.py~  reviews.py
app/routers/: categories.py  products.py  reviews.py  users.py
app/services/: categories.py  enum.py  products.py  reviews.py
app/utils/: common.py
